fix bottom shadow on overflow

--- a/src/client/css/app.css
+++ b/src/client/css/app.css
@@ -1,13 +1,15 @@
-html {
+html,
+body,
+#root {
   height: 100%;
+  width: 100%;
+}
+
+#root {
   -moz-box-shadow: inset 0 0 125px #000000;
   -webkit-box-shadow: inset 0 0 125px #000000;
   box-shadow: inset 0 0 125px #000000;
-}
-
-body {
-  min-height: 100%;
+  overflow: auto;
   margin: 0;
-  text-align: center;
   background-color: #4c4f54 !important;
 }
